# gocomet

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  config.py  main.py  observability.py
backend/agents/: cross_validator.py  extractor.py  gemini.py  router.py  validator.py
backend/api/: routes.py
backend/pipeline/: graph.py  multi.py  state.py
backend/storage/: db.py  query.py
backend/trigger/: imap_watcher.py  models.py  smtp_sender.py
data/rulesets/: customer_abc.json  customer_acme.json  sender_map.json
data/sample_docs/: README.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: CGWorkflow.jsx  ExtractionView.jsx  QueryPanel.jsx  RouterDecision.jsx  SinglePipeline.jsx  UploadPanel.jsx  ValidationView.jsx
tests/: test_api.py  test_cross_validator.py  test_extractor.py  test_multi_pipeline.py  test_query.py  test_router.py  test_storage.py  test_trigger.py  test_validator.py
