[project]
name = "trade-document-validation"
version = "0.1.0"
description = "Trade document validation pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "google-genai==0.6.0",
    "langgraph==0.2.60",
    "langgraph-checkpoint-sqlite==2.0.1",
    "langfuse>=2.57.0",
    "litellm>=1.55.0",
    "pydantic==2.10.4",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
